<resources>
    <string name="app_name">Vikipedia</string>
    <string name="wikipedialogo">wikipedialogo</string>
    <string name="search_word_here">Search word here</string>
    <string name="menu_button">Menu Button</string>
    <string name="search_button">Search Button</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="quote_of_the_day">Random Quote</string>
    <string name="todo_pad">To-Do Pad</string>
    <string name="history">History</string>
    <string name="todolist">Today\'s Plan</string>
    <string name="learn_with_me">Learn with me</string>
    <string name="random_word">Random Word</string>
    <string name="shuffle">Shuffle</string>
    <string name="close">Close</string>
    <string name="search">Search</string>
    <string name="calendar">Calendar</string>
    <string name="note">Note</string>
    <string name="volume_up_button">Volumne Up</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="ok">Ok</string>
    <string name="title">Title</string>
    <string name="add_note">Add Note</string>
    <string name="note_pad">Note Pad</string>
    <string name="bookmark">Bookmark</string>
</resources>