<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/qouteoftheday"
            android:icon="@drawable/ic_calendar_today"
            android:title="@string/quote_of_the_day" />

        <item
            android:id="@+id/note_pad"
            android:icon="@drawable/ic_note"
            android:title="@string/note_pad" />

        <item
            android:id="@+id/history"
            android:icon="@drawable/ic_history"
            android:title="@string/history" />

        <item
            android:id="@+id/bookmarks"
            android:icon="@drawable/ic_bookmark"
            android:title="@string/bookmark" />

        <item
            android:id="@+id/learnwithme"
            android:icon="@drawable/ic_book"
            android:title="@string/learn_with_me" />

        <item
            android:id="@+id/randomword"
            android:icon="@drawable/ic_shuffle"
            android:title="@string/random_word" />

    </group>
</menu>