<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_primary">


    <LinearLayout
        android:layout_width="408dp"
        android:layout_height="744dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="409dp"
            android:layout_height="74dp"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints,VisualLintBounds"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">

            <ImageView
                android:id="@+id/closeNav"
                android:layout_width="42dp"
                android:layout_height="35dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:contentDescription="@string/close"
                android:focusable="true"
                app:srcCompat="@drawable/ic_back_arrow"
                app:tint="@color/white"
                tools:ignore="TouchTargetSizeCheck"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="407dp"
            android:layout_height="580dp"
            android:orientation="vertical"
            android:paddingStart="60dp"
            android:paddingTop="100dp"
            tools:ignore="MissingConstraints,RtlSymmetry"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="75dp">

            <LinearLayout
                android:id="@+id/randomQuoteNav"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                android:padding="10dp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="76dp"
                tools:layout_editor_absoluteY="132dp">

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@drawable/circular"
                    android:contentDescription="@string/calendar"
                    app:srcCompat="@drawable/ic_quote"
                    tools:ignore="MissingConstraints,TouchTargetSizeCheck"
                    tools:layout_editor_absoluteX="76dp"
                    tools:layout_editor_absoluteY="129dp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/quote_of_the_day"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="126dp"
                    tools:layout_editor_absoluteY="138dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/historyNav"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                android:padding="10dp"
                tools:ignore="MissingConstraints,DuplicateSpeakableTextCheck"
                tools:layout_editor_absoluteX="76dp"
                tools:layout_editor_absoluteY="216dp">

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@drawable/circular"
                    android:contentDescription="@string/history"
                    app:srcCompat="@drawable/ic_history"
                    tools:ignore="MissingConstraints,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/history"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="126dp"
                    tools:layout_editor_absoluteY="233dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/notepadNav"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                android:padding="10dp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="76dp"
                tools:layout_editor_absoluteY="174dp">

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@drawable/circular"
                    android:contentDescription="@string/todo_pad"
                    app:srcCompat="@drawable/ic_note"
                    tools:ignore="MissingConstraints,TouchTargetSizeCheck"
                    tools:layout_editor_absoluteX="76dp"
                    tools:layout_editor_absoluteY="181dp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/todo_pad"
                    android:textColor="#FFFFFFFF"
                    android:textStyle="bold"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="126dp"
                    tools:layout_editor_absoluteY="188dp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/todayPlanNav"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                android:padding="10dp"
                tools:ignore="MissingConstraints,DuplicateSpeakableTextCheck"
                tools:layout_editor_absoluteX="76dp"
                tools:layout_editor_absoluteY="258dp">

                <ImageButton
                    android:id="@+id/imageButton4"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@drawable/circular"
                    android:contentDescription="@string/todolist"
                    app:srcCompat="@drawable/ic_bookmark"
                    tools:ignore="MissingConstraints,TouchTargetSizeCheck,DuplicateSpeakableTextCheck"
                    tools:layout_editor_absoluteX="76dp"
                    tools:layout_editor_absoluteY="284dp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/todolist"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="126dp"
                    tools:layout_editor_absoluteY="293dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/learnwithmeNav"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                android:padding="10dp"
                tools:ignore="MissingConstraints,DuplicateSpeakableTextCheck"
                tools:layout_editor_absoluteX="76dp"
                tools:layout_editor_absoluteY="300dp">

                <ImageButton
                    android:id="@+id/imageButton5"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@drawable/circular"
                    android:contentDescription="@string/learn_with_me"
                    app:srcCompat="@drawable/ic_book"
                    tools:ignore="MissingConstraints,TouchTargetSizeCheck,DuplicateSpeakableTextCheck"
                    tools:layout_editor_absoluteX="76dp"
                    tools:layout_editor_absoluteY="335dp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/learn_with_me"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="126dp"
                    tools:layout_editor_absoluteY="344dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/randomwordNav"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                android:padding="10dp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="76dp"
                tools:layout_editor_absoluteY="341dp">

                <ImageButton
                    android:id="@+id/imageButton6"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@drawable/circular"
                    android:contentDescription="@string/shuffle"
                    app:srcCompat="@drawable/ic_shuffle"
                    tools:ignore="MissingConstraints,TouchTargetSizeCheck"
                    tools:layout_editor_absoluteX="100dp"
                    tools:layout_editor_absoluteY="436dp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/random_word"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="163dp"
                    tools:layout_editor_absoluteY="439dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>